# sealedge

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  mkdocs.yml  mutation_baseline.txt  mutmut.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml  mutation.yml  publish.yml  tests.yml
docs/: changelog_source.md  contributing_source.md  index.md  methodology.md  releasing.md  testing.md
docs/api/: audit.md  core.md  quant_lib.md  research.md  tools.md
notebooks/: 01_quick_start.ipynb  01_quick_start.py  02_custom_experiment.ipynb  02_custom_experiment.py  03_interpreting_results.ipynb  03_interpreting_results.py  README.md
paper/: README.md  article.tex  refs.bib
quant_lib/: __init__.py  __main__.py
quant_lib/audit/: __init__.py  holdout.py  hypothesis.py  journal.py
quant_lib/cli/: __init__.py  _output.py  _report.py  _utils.py  commit_cmd.py  explore.py  init_cmd.py  list_cmd.py  main.py  migrate_seals.py  show.py  status_cmd.py
quant_lib/core/: __init__.py  _config.py  _data.py  _engine.py  _features.py  _logging.py  _metrics.py  _portfolio.py  _risk_allocation.py  _spa.py  _testing.py  _wfa.py
quant_lib/experiments/: __init__.py  base.py  built_in.py  funding_rate_carry.py  pullback_sniper_rsi.py  registry.py  vol_compression_v1.py
quant_lib/research/: __init__.py  _pipeline.py  best_params.py  cache.py  candidate.py  commit.py  exceptions.py  plotting.py  reporting.py  results.py  session.py
quant_lib/tools/: __init__.py  backtest.py  data.py  features.py  portfolio.py  stats.py  universe.py
quant_lib/utils/: __init__.py  config.py  git.py  logging.py
replication/: README.md  data_manifest.md
replication/output_paper_grade/: hansen_fallback_note.txt  results.json  results.md
replication/output_seal_demo/: results.json  results.md
scripts/: _linux_bounded_suite.sh  _linux_fresh_install.sh  _linux_full_suite.sh  investigate_c.py  reproduce.py  reproduce_fast.py  reproduce_seal_demo.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/audit/: index.html
site/api/core/: index.html
site/api/quant_lib/: index.html
site/api/research/: index.html
site/api/tools/: index.html
site/changelog_source/: index.html
site/contributing_source/: index.html
site/methodology/: index.html
site/releasing/: index.html
site/search/: search_index.json
site/testing/: index.html
tests/: conftest.py  test_audit.py  test_best_params.py  test_cache.py  test_candidate.py  test_chaos.py  test_cli.py  test_cli_helpers.py  test_cli_list.py  test_cli_main.py  test_cli_output.py  test_cli_report.py  test_commit.py  test_commit_coverage_uncovered.py  test_config.py  test_config_validation.py  test_conftest.py  test_data.py  test_e2e_full_pipeline.py  test_e2e_happy_path.py  test_engine.py  test_engine_matrix.py  test_experiments.py  test_features.py  test_integration_real_data.py  test_invariants.py  test_main_module.py  test_metrics.py  test_metrics_bootstrap.py  test_migrate_seals.py  test_perf.py  test_perf_regression.py  test_plotting.py  test_portfolio.py  test_psr_ess.py  test_public_api.py  test_pullback_sniper.py  test_python_api.py  test_regression_b0_1_hmac_seal.py  test_regression_b0_2_sl_pct.py  (+29 more)
tests/fixtures/: README.md  btcusdt_1h_2024_jan.csv
tools/: download_fixture.py
