[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_lib"
version = "0.3.0"
description = "Honest backtesting toolkit for quantitative trading strategies with sealed holdout discipline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "quant_lib contributors"},
]
keywords = [
    "quantitative-finance",
    "backtesting",
    "cryptocurrency",
    "statistics",
    "reproducible-research",
    "walk-forward-analysis",
    "holdout-validation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.58",
    "optuna>=3.0",
    "rich>=13.0",
    "requests>=2.28",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    "pytest-benchmark>=4",
    "hypothesis>=6",
    "black",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]

[project.scripts]
quant_exp = "quant_lib.cli.main:app"

[project.urls]
Homepage = "https://github.com/TODO-ACTUAL-USERNAME/quant_lib"
Repository = "https://github.com/TODO-ACTUAL-USERNAME/quant_lib"
Issues = "https://github.com/TODO-ACTUAL-USERNAME/quant_lib/issues"

[tool.setuptools.packages.find]
namespaces = false
include = ["quant_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access (skipped when OFFLINE=1)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:optuna",
    "ignore::DeprecationWarning:numba",
    "ignore::FutureWarning:numba",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["quant_lib"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
skip_empty = true


# F16 — minimal mutmut configuration. Scoped to the core research
# layer (Candidate + CommitResult) for the highest mutation-score
# return on investment. See mutmut.toml for usage instructions.
[tool.mutmut]
runner = "mutmut.trampoline"
tests_dir = "tests/"
mutate = [
    "quant_lib/research/candidate.py",
    "quant_lib/research/commit.py",
]
